finnal got the css and index.js files to work and not give errors

--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -21,18 +21,13 @@
           Note Taker <span role="img" aria-label="Memo">📝</span>
         </h1>
         <h4 class="mt-4">Take notes with Express</h4>
-        <a class="btn btn-primary btn-lg mt-4" href="notes.html" role="button"
+        <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button"
           >Get Started</a
         >
       </div>
     </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js"
-      integrity="sha512-1Gn7//DzfuF67BGkg97Oc6jPN6hqxuZXnaTpC9P5uw8C6W4yUNj5hoS/APga4g1nO2X6USBb/rXtGzADdaVDeA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./assets/js/index.js"></script>
+
+    <script src="/Develop/public/assets/js/index.JS"></script>
   </body>
 </html>
