--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -28,6 +28,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="/Develop/public/assets/js/index.JS"></script>
+    <script src="/Develop/public/assets/js/index.js"></script>
   </body>
 </html>
