--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link type="text/css" rel="stylesheet" href="/Develop/public/assets/css/styles.CSS">
+    <link type="text/css" rel="stylesheet" href="/Develop/public/assets/css/styles.css">
   </head>
 
   <body>
@@ -33,6 +33,6 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/Develop/public/assets/js/index.JS"></script>
+    <script src="/Develop/public/assets/js/index.js"></script>
   </body>
 </html>
